--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#212832",
-  "background_color": "#212832"
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
