--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
+    "react-devtools": "^7.0.1",
     "react-dom": "^19.1.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.6.2",
