--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://zenxync.github.io/zencore/",
   "name": "zencore",
-  "version": "0.1.0",
+  "version": "2.2.2-beta.1",
   "private": true,
   "dependencies": {
     "@react-three/fiber": "^9.1.2",
